--- a/client/styles.css
+++ b/client/styles.css
@@ -56,6 +56,14 @@ h1 {
   display: block;
 }
 
+.reviews {
+  padding-left: 0;
+}
+
+.review {
+  list-style: none;
+}
+
 /* https://jsfiddle.net/NullDev/nju10Loz/2/ */
 .rating {
   display: flex;
